// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ah huge 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    className="IS5"
  >
    <View
      className="IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile ah medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    className="IS5"
  >
    <View
      className="IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile ah wide 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    className="IS5"
  >
    <View
      className="IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile ah without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
  margin-bottom: 5px;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-top: 5px;
  align-items: center;
}
</style>

<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": "10px",
      "paddingRight": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    className="IS1"
    fill={true}
    resizeMode="cover"
    rounded={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    className="IS5"
  >
    <View
      className="IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS3"
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      className="IS4"
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
